# cmake-project-template-test

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/addition/: CMakeLists.txt  addition.cpp  addition.h
src/division/: CMakeLists.txt
test/: CMakeLists.txt
